--- a/Fig4/Fig4C_20180212_expression_keygenes_fromRNAseq_forPaper.Rmd
+++ b/Fig4/Fig4C_20180212_expression_keygenes_fromRNAseq_forPaper.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(DESeq2)
 ###### we will define our gene set by those genes that change in FGFR3 mutant tumors, without considering UTX status
-dds <- readRDS("../../../../20181008_FGFR3AMP_vs_mut_lumpap/FGFR3_AMPvMUT_lumpap/FGFR3_AMPvMUT_lumpap_2_dds.RData")
+dds <- readRDS("/Users/douglasbarrows/Desktop/allis_postdoc_all_the_things/Presentations_LabMetings_papers/UTX_paper/PNAS_UTX_scripts/Fig4/FGFR3_AMPvMUT_lumpap/FGFR3_AMPvMUT_lumpap_dds.RData")
 resultsNames(dds)
 dds <- estimateSizeFactors(dds)
 counts <- as.data.frame(counts(dds, normalized=TRUE))
@@ -20,7 +20,7 @@ counts <- as.data.frame(counts(dds, normalized=TRUE))
 
 # now we have our list of genes that we are interested in, we have to labels all of the patietns based on the mutation status of all the proteins we will use in the heatmap
 
-patient_list_path <- "../../../../alterations_across_samplesFGFR3_UTX_MLL3_4__alltumors.tsv"
+patient_list_path <- "/Volumes/shared_folder_20200225/from Allis_sharedrive/20200824_migrate/Data/TCGA_BLCA_updated2017/TCGA_2017_bladder_git_20180320/ANALYSES_TCGAbiolinks_hg19/hg19/alterations_across_samples _FGFR3_UTX_MLL3_4_TCGA2017.tsv"
 genes <-  c("KDM6A", "KMT2C", "KMT2D", "FGFR3")
 
 # this information on the patiens with these particular mutations was downloaded from cBIO portal
@@ -82,7 +82,7 @@ counts <- counts[ , colnames(counts) %in% patients$Sample.ID]
 
 
 library(dplyr)
-meta_data <- read.csv("../../../../../../../metadata.csv", header = TRUE, stringsAsFactors = FALSE)
+meta_data <- read.csv("/Volumes/shared_folder_20200225/from Allis_sharedrive/20200824_migrate/Data/TCGA_BLCA_updated2017/metadata.csv", header = TRUE, stringsAsFactors = FALSE)
 
 all_lumpap_tumors <- filter(meta_data, (mRNA.cluster == "Luminal_papillary")) %>% dplyr::select(Case.ID)
 counts <- counts[ , substr(colnames(counts), 1, 12) %in% all_lumpap_tumors$Case.ID]
@@ -294,7 +294,7 @@ ggsave("./stemANDdiff_lumpap_FGFR3_UTX_noMLL_genotypes.pdf", device = "pdf",  wi
 
 
 
-writeLines(con = paste("sessionInfo.txt"), text = capture.output(sessionInfo()))
+writeLines(con = paste("Fig4C_20180212_expression_keygenes_fromRNAseq_forPaper_sessionInfo.txt"), text = capture.output(sessionInfo()))
 ```
 
 
